# SymCamel

./: README.md
First-Order-Logic/: README.md
symcamel/: dune-project  symcamel.opam
symcamel/_build/: .db  .digest-db  log
symcamel/_build/default/: META.symcamel  symcamel.dune-package  symcamel.install
symcamel/_build/default/lib/: SymOps.mli  SymVar.ml  symcamel.cma  symcamel.cmxa  symcamel.cmxs  symcamel__.ml-gen
symcamel/_build/default/lib/.merlin-conf/: lib-symcamel
symcamel/_build/default/lib/.symcamel.objs/: symcamel.impl.all-deps  symcamel.impl.d  symcamel__SymOps.impl.d  symcamel__SymOps.intf.all-deps  symcamel__SymOps.intf.d  symcamel__SymVar.impl.d  symcamel__SymVar.intf.d
symcamel/_build/default/lib/.symcamel.objs/byte/: symcamel.cmi  symcamel.cmo  symcamel.cmt  symcamel__.cmi  symcamel__.cmo  symcamel__.cmt  symcamel__SymOps.cmi  symcamel__SymOps.cmo  symcamel__SymOps.cmt  symcamel__SymOps.cmti  symcamel__SymVar.cmi  symcamel__SymVar.cmo  symcamel__SymVar.cmt  symcamel__SymVar.cmti
symcamel/_build/default/lib/.symcamel.objs/native/: symcamel.cmx  symcamel__.cmx  symcamel__SymOps.cmx  symcamel__SymVar.cmx
symcamel/_build/default/test/: test_sym_var.ml
symcamel/_build/default/test/.merlin-conf/: exe-test_sym_ops  exe-test_sym_var
symcamel/_build/default/test/.test_sym_ops.eobjs/byte/: dune__exe__Test_sym_ops.cmi  dune__exe__Test_sym_ops.cmti
symcamel/_build/default/test/.test_sym_ops.eobjs/native/: dune__exe__Test_sym_ops.cmx
symcamel/lib/: SymOps.ml  SymVar.mli  dune  symcamel.ml
symcamel/test/: dune  test_sym_var.ml
(+27 files in other folders)
