(lang dune 3.12)

(name symcamel)

(generate_opam_files true)

(source
 (github JorgeV92/SymCamel))

(authors "Jorge Velez")

(maintainers "Jorge Velez")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name symcamel)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
